Fix a bug when post title is too long

--- a/css/pengx.css
+++ b/css/pengx.css
@@ -270,6 +270,7 @@ div.tooltip-inner {
 /* 归档和时间线页面列表样式 */
 ul.posts-list {
   list-style: none;
+  position: relative;
 }
 
 ul.posts-list li{
@@ -287,6 +288,8 @@ a.post-url {
 }
 
 span.post-right-info {
+  right: 0;
+  position: absolute;
   font-size: 16px;
   color: #BBBBBB;
 }
